<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_mission_planner</name>
  <version>0.0.1</version>
  <description>Robot Mission Planner</description>
  <maintainer email="kuceral4@fel.cvut.cz">Kucera Ales</maintainer>
  <maintainer email="vlkjan6@fel.cvut.cz">Vlk Jan</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav2_common</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
